[workspace]
members = [
    "programs/*"
]
resolver = "2"

[profile.release]
opt-level = "z"          # Optimize for size
overflow-checks = true
lto = "fat"
codegen-units = 1
panic = "abort"          # Remove unwinding code
strip = true             # Strip symbols

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
