[package]
name = "locksmith"
version = "0.1.0"
description = "Native Solana token locker"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "locksmith"

[features]
default = []
no-entrypoint = []

[dependencies]
solana-program = "2.3"
spl-token = { version = "6.0", features = ["no-entrypoint"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("custom-heap", "custom-panic"))',
] }
