[package]
name = "locksmith"
version = "0.1.0"
description = "Native Solana token locker"
authors = ["Tally Pay Contributors <roland@tallybl.ink>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "locksmith"

[features]
default = []
no-entrypoint = []

[dependencies]
shank = "0.4.6"
solana-program = "3"
solana-system-interface = { version = "2", features = ["bincode"] }
spl-token = { version = "9", features = ["no-entrypoint"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("custom-heap", "custom-panic"))',
] }

[dev-dependencies]
solana-program-test = "3.1.2"
solana-sdk = "3.0.0"
